--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <audio id="bg-music" autoplay loop>
-  <source src="WhatsApp Audio 2026-02-14 at 12.17.09 PM.mpeg" type="audio/mpeg">
+  <source src="musica.mp3" type="audio/mpeg">
 </audio>
 
 
