--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <audio id="bg-music" autoplay loop>
-  <source src="musica.mp3" type="audio/mp3">
+  <source src="./musica.mp3" type="audio/mp3">
 </audio>
 
 <body>
