--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<audio id="bg-music" autoplay loop>
-  <source src="./musica.mp3" type="audio/mp3">
-</audio>
+
 
 <body>
 
@@ -23,6 +21,10 @@
   <div class="cursor" id="cursor"></div>
   <div class="cursor-ring" id="cursorRing"></div>
 
+  <!-- Audio -->
+  <audio id="bg-audio" preload="auto">
+    <source src="musica.mp3" type="audio/mpeg">
+  </audio>
 
   <!-- ─── ENVELOPE SCREEN ───────────────────────── -->
   <div id="envelope-screen">
@@ -71,7 +73,7 @@
                 <circle cx="2" cy="2" r="1.5" fill="#C9A96E" opacity=".7" />
               </svg>
             </div>
-  
+
             <!-- Wax seal -->
             <div class="env-seal">
               <svg class="seal-svg" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
