--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-
+<audio id="bg-music" autoplay loop>
+  <source src="musica.mp3" type="audio/mp3">
+</audio>
 
 <body>
 
@@ -21,10 +23,7 @@
   <div class="cursor" id="cursor"></div>
   <div class="cursor-ring" id="cursorRing"></div>
 
-  <!-- Audio -->
-  <audio id="bg-audio" preload="auto">
-    <source src="musica.mp3" type="audio/mpeg">
-  </audio>
+
 
   <!-- ─── ENVELOPE SCREEN ───────────────────────── -->
   <div id="envelope-screen">
